--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
+    <div></div>
+    <button>eu</button>
     <h1>Hello World</h1>
     <h1>Hello World</h1>
+
+    <p>
+        I like to program!!!
+    </p>
 
 </body>
 
