started work on a second page

--- a/second.html
+++ b/second.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/div.css">
 </head>
 
 <body>
@@ -14,13 +14,19 @@
         <a href="second.html">Second page</a>
 
     </div>
-    <button>eu</button>
-    <h1>Hello World</h1>
-    <h1>Hello World</h1>
+    <h1>Here is the second page</h1>
 
-    <p>
-        I like to program!!!
-    </p>
+    <div>
+        This will have a list of music
+    </div>
+
+    <div>
+        This should have an image!!!
+    </div>
+
+    <div>
+        What can I add here???
+    </div>
 
 </body>
 
