--- a/second.html
+++ b/second.html
@@ -11,6 +11,7 @@
 <body>
     <div>
         <a href="index.html">Home page</a>
+        <br>
         <a href="second.html">Second page</a>
 
     </div>
@@ -18,6 +19,12 @@
 
     <div>
         This will have a list of music
+        <ol>
+            <li><a href="">Sonic Music</a></li>
+            <li><a href="">Kingdom Hearts</a></li>
+            <li><a href="">Legend of Zelda</a></li>
+            <li><a href="">Pokemon Series</a></li>
+        </ol>
     </div>
 
     <div>
