--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="round">
         <a href="index.html">Home page</a>
         <br>
         <a href="second.html">Second page</a>
