making notes for myself

--- a/second.html
+++ b/second.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
-    <div>
+    <div class="round">
         <a href="index.html">Home page</a>
         <br>
         <a href="second.html">Second page</a>
+        <br>
+        <a href="mock.html">Practice page</a>
 
     </div>
     <h1>Here is the second page</h1>
