--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <a href="index.html">Home page</a>
         <br>
         <a href="second.html">Second page</a>
+        <br>
+        <a href="mock.html">Practice page</a>
 
     </div>
     <button>eu</button>
