review the notes and the todo

--- a/mock.html
+++ b/mock.html
@@ -19,23 +19,24 @@
 
         </div>
 
-        <table>
-            <tr>
-                <!-- refer to to the original page for design details -->
-                <ul>
-                    <li>Welcome</li>
-                    <li>Contact</li>
-                    <li>Give Online</li>
-                </ul>
-            </tr>
-        </table>
+        <div>
+            <table>
+                <tr>
+                    <ul>
+                        <li>Welcome</li>
+                        <li>Contact</li>
+                        <li>Give Online</li>
+                    </ul>
+                    <!-- refer to to the original page for design details -->
+                </tr>
+            </table>
 
+        </div>
 
         <div>
             <h1>About Us</h1>
             <p>We are a local church in Corona CA</p>
         </div>
-        <div></div>
     </div>
 </body>
 
